Refactor Code After Code Review

--- a/blog.html
+++ b/blog.html
@@ -16,30 +16,32 @@
      </header>
      <main>
         <section>
-            <div class="image">
-               <img src="assets/media/pic01.png" alt="Electric Bulb">
-           </div>
-            <div class="details">
-                <h4>
-                    Lorem ipsum dolor sit amet consectetur,
-                    Que las luna hule viva.
-                </h4>
-                <p>
-                    If before and amiss shameless where saw by lineage. 
-                    Ah each but feud sore visit olden that. Not he 
-                    sister to thy his to if, resolved the sullen as will.
-                    Lorem, ipsum dolor sit amet consectetur adipisicing 
-                    elit. Molestiae deserunt assumenda dolorum iusto 
-                    tempora quae placeat beatae officia, natus consectetur!
-                    La larga criaturas llanura y los. Desnudo poniendo 
-                    con yo con y muertos abierta la. Que las luna hule viva.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. In, aut!
-                </p>
-                <a href="#">Read More</a>
-               </div>
+            <article>
+                <div class="image">
+                    <img src="assets/media/pic01.png" alt="Electric Bulb">
+                </div>
+                 <div class="details">
+                     <h4>
+                         Lorem ipsum dolor sit amet consectetur,
+                         Que las luna hule viva.
+                     </h4>
+                     <p>
+                         If before and amiss shameless where saw by lineage. 
+                         Ah each but feud sore visit olden that. Not he 
+                         sister to thy his to if, resolved the sullen as will.
+                         Lorem, ipsum dolor sit amet consectetur adipisicing 
+                         elit. Molestiae deserunt assumenda dolorum iusto 
+                         tempora quae placeat beatae officia, natus consectetur!
+                         La larga criaturas llanura y los. Desnudo poniendo 
+                         con yo con y muertos abierta la. Que las luna hule viva.
+                         Lorem ipsum dolor sit amet consectetur adipisicing elit. In, aut!
+                     </p>
+                     <a href="#">Read More</a>
+                    </div>
+            </article>
         </section>
-        <section class="top-section">
-            <div class="image learn">
+        <section>
+            <article class="image learn">
                <img src="assets/media/pic03.png" alt="Person Working on a Mobile Phone">
                <h4>
                 Lorem ipsum dolor sit amet consectetur,
@@ -57,8 +59,8 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. In, aut!
             </p>
             <a href="#">Learn More</a>
-           </div>
-            <div class="details learn">
+        </article>
+            <article class="details learn">
                     <img src="assets/media/pic02.png" alt="Work Table">
                     <h4>
                      Lorem ipsum dolor sit amet consectetur,
@@ -76,8 +78,7 @@
                      Lorem ipsum dolor sit amet consectetur adipisicing elit. In, aut!
                  </p>
                  <a href="#">Learn More</a>
-            </div>
-                
+                </article>               
         </section>
      </main>
 </body>
