--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <h1 class="page-title">The Box Model, Box-sizing & Box-shadow</h1>
     </header>
     <main>
-        <section class="exrcise1">
+        <section>
             <h3>Exercise One</h3>
             <div class="square-box">
-                <p class="square">
+                <div class="square">
                     <span class="inner-square"></span>
-                </p>
+                </div>
             </div>
-            <article class="content">
+            <div class="content">
                 <span>
                     <div class="circle circle1"></div>#99D8CA
                 </span>
@@ -38,23 +38,23 @@
                 <span>
                     <div class="circle circle4"></div>#5873E2
                 </span>
-            </article>
+            </div>
         </section>
         <hr>
-        <section class="exercise2">
+        <section>
             <header>
                 <h3>Exercise Two</h3>
             </header>
             <section class="container">
-                <div class="box no-border"></div>
-                <div class="box no-border"></div>
-                <div class="box no-border"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
             </section>
             <hr>
             <section class="container">
-                <div class="box with-border box4"></div>
-                <div class="box with-border box5"></div>
-                <div class="box with-border box6"></div>
+                <div class="box with-border"></div>
+                <div class="box with-border"></div>
+                <div class="box with-border"></div>
             </section>
         </section>
 
